src/app/components/sportsbook/match-card/MatchCard.module.scss
@use '@/app/styles/variables' as *;
@use '@/app/styles/breakpoints' as *;

.match {
	padding: 1rem 1rem;
	border-bottom: 1px solid $heather;
	max-width: 100%;
	flex: 1 1 calc(50% - 20px);
	position: relative;
	transition: all 200ms ease-in-out;

	&:nth-of-type(odd) {
		&::after {
			width: 1px;
			background: $heather;
			top: 35px;
			bottom: 35px;
			right: -0px;
			position: absolute;
			content: '';
			z-index: 99;
			@include breakpoint(xs) {
				display: none;
			}
		}
	}

	&:nth-last-child(1) {
		&::after {
			display: none;
		}
	}
	.content {
		padding: 10px;
		text-decoration: none;
		color: $charade;
		display: flex;

		gap: 10px;
		height: 120px;
		justify-content: center;
		transition: all 200ms ease-in-out;
		&:hover {
			background-color: darken($white, 3%);
		}
		.leftSide {
			flex: 1;
			display: flex;
			flex-direction: column;
			.lowerTeam,
			.upperTeam {
				display: flex;
				align-items: center;
				gap: 10px;
				flex: 1;
				strong {
					font-weight: 500;
					font-size: $fontSizeMd;
					text-transform: uppercase;
				}
				span {
					font-size: $fontSizeXs;
					position: relative;
					top: -4px;
					left: -5px;
				}
			}
			.score {
				width: 65px;
			}
			.statusLine {
				font-size: $fontSizeXs;
				padding-top: 10px;
				display: flex;
				gap: 10px;
				text-transform: uppercase;
			}
		}
		.rightSide {
			width: 55px;
			display: flex;
			flex-direction: column;
			align-items: center;
			justify-content: space-evenly;
			strong {
				height: 50px;
				display: flex;
				align-items: center;
			}
			.time {
				font-size: $fontSizeXs;
				padding-top: 10px;
			}
			.info {
				font-size: $fontSizeSm;
				display: flex;
				flex-direction: column;
				align-items: flex-end;
				.station {
					font-size: $fontSizeXs;
				}
			}
		}
	}
}

